# parser-experiments

./: CHANGELOG.md  README.md  default.nix  parser-experiments.cabal
app/: Main.hs
nix/: overrides.nix
src/: ParserExperiments.hs
